fixing ipad pro widht on mobile

--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -2639,8 +2639,8 @@ p {
 
 @media (max-width: 767px) {
 .ipad-pro-portrait {
-  height: 335px;
-  width: 456px;
+  height: 268px;
+  width: 364px;
   background: #000000;
   margin: 30px auto;
   border-radius: 25px;
